--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,350 @@
+body{
+    font-family: "Montserrat", sans-serif;
+    margin: 0;
+    background-color: black;
+    color: white;
+    overflow: hidden;
+}
+
+.main{
+    display: flex;
+    height: 100vh;
+    padding: 0.5rem;
+}
+
+.sidebar{
+
+    background-color: #000;
+    width: 340px;
+    border-radius: 1rem; /*16px*/
+    margin-right: 0.5rem;
+}
+
+.maincontent{
+    background-color: #121212;
+    flex: 1; /*it is saying that remaning area is mine except the area which is required for remaining divs*/
+    border-radius: 1rem;
+    overflow: auto;
+    padding: 0 1.5rem 0 1.5rem;
+}
+
+.musicplayer{
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 75px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.nav
+{
+    background-color: #121212;
+    border-radius: 1rem;    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+    padding: 0.5rem 0.75rem;
+}
+
+.nav-option{
+    line-height: 2.5rem;
+    opacity: 0.7;
+    padding: 0.5rem 0.75rem;
+}
+
+.nav-option i{
+    font-size: 1.25rem;
+}
+
+.nav-option a{
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+
+.nav-option:hover{
+    opacity: 1;
+}
+
+.library{
+    background-color: #121212;
+    border-radius: 1rem;
+    height: 100%;
+    margin-top: 0.5rem;
+    padding: 0.5rem 0.75rem;
+}
+
+.options{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.lib-option img{
+    height: 1.25rem;
+    width: 1.25rem;
+}
+
+.icons{
+    font-size: 1.25rem;
+    display: flex;
+
+}
+
+.icons i{
+    opacity: 0.7;
+    margin-right: 1rem;
+}
+
+.icons i:hover{
+    opacity: 1;
+}
+
+.box{
+    height: 8rem;
+    background-color: #232323;
+    border-radius: 0.75rem;
+    margin: 0.75rem 0 1.75rem 0;
+    padding: 0.75rem 1rem;
+}
+.font-p1{
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.font-p2{
+    font-size: 0.85rem;
+    opacity: 0.9;
+}
+
+.badge{
+    background-color: white;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: fit-content;
+}
+
+.dark-badge{
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: fit-content;
+}
+
+.sticky-nav{
+    position: sticky;
+    top: 0;
+    background-color: #121212;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1rem;
+    z-index: 10;
+}
+
+.sticky-nav-icons{
+    margin-left: 0.75rem;
+}
+
+.sticky-nav-options
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-item{
+    margin-right: 1.2rem;
+}
+
+@media (max-width:1000px)
+{
+    .hide{
+        display: none;
+    }
+}
+
+.card{
+    background-color: #232323;
+    width: 150px;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+
+}
+
+
+.card img{
+    width: 100%;
+    border-radius: 0.5rem;
+}
+
+.card-title{
+    font-weight: 600;
+}
+
+.card-info{
+    font-size: 0.85rem;
+    opacity: 0.8;
+}
+
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer{
+    height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.line{
+    width: 100%;
+    height: 30%;
+    border-top: 1px solid white;
+    opacity: 0.4;
+}
+
+.onepart{
+    height: 100%;
+    width: 33.33%;
+    display: flex;
+}
+
+.onepart img{
+    width: 11%;
+    height: 3.5rem;
+    padding: 1rem;
+    margin-left: 1rem;
+}
+
+.artiestname p{
+    margin: 0;
+    padding: 0;
+    margin-left: 1rem;
+    opacity: 0.7;
+    
+}
+
+.artiestname p:hover{
+    opacity: 1;
+}
+
+.onepart i{
+    justify-content: end;
+    align-items: end;
+    align-self: flex-start;
+    margin-left: 1rem;
+    margin-top: 2rem;
+    opacity: 0.7;
+}
+
+.onepart i:hover{
+    opacity: 1;
+}
+
+.player{
+    height: 100%;
+    width: 33.33%;
+}
+
+.endicons
+{
+    display: flex;
+    width: 25%;
+    height: 100%;
+
+}
+
+.endicons img{
+    margin-left: 0.7rem;
+    height: 2.5rem;
+    opacity: 0.8;
+    background-size: contain;
+    margin-top: 1.5rem;
+}
+
+.endicons img:hover{
+    opacity: 1;
+}
+
+#volume{
+    background: #d3d3d3;
+
+}
+
+.volume {
+  accent-color: green; /* works in most modern browsers */
+  margin-top: 0.5rem;
+
+}
+
+.player-controls{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-control-icon{
+    height: 1rem;
+    margin-right: 1.75rem;
+    opacity: 0.7;
+}
+
+.player-control-icon:hover{
+    opacity: 1;
+}
+
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progress-bar{
+    width: 70%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+    
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+    background: linear-gradient(to right, #1db760 50%, #ddd 50%);
+    border-radius: 100px;
+    height: 0.2rem;
+
+}
+
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #1db760;
+    border-radius: 50%;
+    margin-top: -6px;
+}
+
 
